--- a/index.html
+++ b/index.html
@@ -1,13 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Starter Scss</title>
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 
+    <title>Portfollio</title>
+</head>
+
+<body>
+    <!-- HEADER -->
+    <header class="header">
+        <a class="brand" href="#">Shamsiddin</a>
+        <div class="menu__btn"></div>
+        <div class="nav">
+            <a href="#" class="nav__linc">home</a>
+            <a href="#" class="nav__linc">about</a>
+            <a href="#" class="nav__linc">skils</a>
+            <a href="#" class="nav__linc">servises</a>
+            <a href="#" class="nav__linc">work</a>
+            <a href="#" class="nav__linc">contact</a>
+        </div>
+    </header>
+
+    <!-- MAIN -->
+    <section class="main" id="main">
+        <div class="main__content">
+
+            <h2>Hello, I'm <br> <span>Shamsiddin Nosirov</span> </h2>
+
+            <div class="animated-text">
+                <h3>Web Develeper</h3>
+                <h3>blogger</h3>
+                <h3>Web Develeper</h3>
+            </div>
+
+            <a class="btn" href="#">Se My Work</a>
+
+            <div class="media-icons">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="about" id="about">
+        <div class="title reveal">
+            <div class="about__title">About Me</div>
+        </div>
+
+        <div class="content">
+            <div class="column col-left reveal">
+                <div class="img-card">
+                    <img src="./images/photo_2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="col-righte reveal">
+                <h2 class="conent-title">Hey there! I'm <br> Shamsiddin Nosirov</h2>
+                <p class="conent-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint ipsum assumenda autem placeat nesciunt impedit pariatur harum atque saepe aliquid iure,      <br><br> Slore hic culpa vel, id vero. Beatae dolorem doloremque ducimus illo error perferendis eveniet architecto libero fugit non nostrum, aspernatur voluptates accusantium blanditiis id! Eaque, cum perspiciatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, dicta quisquam! Provident, adipisci, saepe nisi sunt ullam nostrum  . <br><br><br>
+                </p>
+
+                <a href="" class="btn">See More</a>
+            </div>
+
+        </div>
+
+        </section>
+
+    <!-- SKILLS -->
+    <section class="skills" id="skills">
+        <div class="title reveal">
+            <div class="about__title">My Skills</div>
+        </div>
+
+        <div class="content">
+            <div class="column col-left reveal">
+                <h2 class="content-title">My Skills and Experiences</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laboriosam cumque tempore vel error quae, qui nesciunt nobis velit eos cum ullam doloribus sapiente quaerat minus inventore ab quod magnam. <br><br><br></p>
+                <a href="" class="btn">See More</a>
+            </div>
+
+            <div class="column col-right reveal">
+                <div class="bar">
+                    <div class="info">
+                        <span>HTML</span>
+                        <span>95%</span>
+                    </div>
+                    <div class="line html"></div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <span>CSS</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="line css"></div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <span>SCSS</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="line scss"></div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <span>Burstrap</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="line butstrap"></div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <span>JavaScript </span>
+                        <span>15%</span>
+                    </div>
+                    <div class="line java"></div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <span>React</span>
+                        <span>10%</span>
+                    </div>
+                    <div class="line react"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- SERVISES -->
+    <section class="servises" id="servises">
+        <div class="title reveal">
+            <div class="about__title">My Sedvises</div>
+
+            <p class="servises__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum rerum aperiam suscipit quae repudiandae, corporis odio, fuga cumque illum maxime ab. Pariatur, nihil? Debitis quos rem quas accusantium facilis.</p>
+        </div>
+
+        <div class="content">
+            <div class="card reveal">
+                <div class="servises-icon">
+                    <i class="fas fa-palette"></i>
+                </div>
+                <div class="info">
+                    <h3>Web Design</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, neque.</p>
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="servises-icon">
+                    <i class="fas fa-file-code"></i>
+                </div>
+                <div class="info">
+                    <h3>Web Develeper</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, neque.</p>
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="servises-icon">
+                    <i class="fas fa-object-group"></i>
+                </div>
+                <div class="info">
+                    <h3>Bloger</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, neque.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- WORK -->
+    <section class="work" id="work">
+        <div class="title reveal">
+            <div class="about__title">My Work</div>
+        </div>
+        <div class="content">
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work1.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work2.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work3.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work4.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work5.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="card reveal">
+                <div class="card-img">
+                    <img src="./images/work6.jpg" alt="" class="">
+                </div>
+            </div>
+
+            <div class="title reveal">
+                <a href="#" class="btn">See All</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="contact">
+        <div class="title reveal">
+            <div class="about__title">About Me</div>
+        </div>
+    </section>
+
+
+    <!-- FOOTER -->
+    <footer class="footer"></footer>
+
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
