--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="animated-text">
                 <h3>Web Develeper</h3>
-                <h3>blogger</h3>
+                <h3>Web Develeper</h3>
                 <h3>Web Develeper</h3>
             </div>
 
@@ -62,9 +62,14 @@
                 </div>
             </div>
 
-            <div class="col-righte reveal">
+            <div class="column col-righte reveal">
                 <h2 class="conent-title">Hey there! I'm <br> Shamsiddin Nosirov</h2>
-                <p class="conent-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint ipsum assumenda autem placeat nesciunt impedit pariatur harum atque saepe aliquid iure,      <br><br> Slore hic culpa vel, id vero. Beatae dolorem doloremque ducimus illo error perferendis eveniet architecto libero fugit non nostrum, aspernatur voluptates accusantium blanditiis id! Eaque, cum perspiciatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, dicta quisquam! Provident, adipisci, saepe nisi sunt ullam nostrum  . <br><br><br>
+                <p class="conent-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint ipsum assumenda
+                    autem placeat nesciunt impedit pariatur harum atque saepe aliquid iure, <br><br> Slore hic culpa
+                    vel, id vero. Beatae dolorem doloremque ducimus illo error perferendis eveniet architecto libero
+                    fugit non nostrum, aspernatur voluptates accusantium blanditiis id! Eaque, cum perspiciatis? Lorem
+                    ipsum dolor sit, amet consectetur adipisicing elit. Sit, dicta quisquam! Provident, adipisci, saepe
+                    nisi sunt ullam nostrum . <br><br><br>
                 </p>
 
                 <a href="" class="btn">See More</a>
@@ -72,7 +77,7 @@
 
         </div>
 
-        </section>
+    </section>
 
     <!-- SKILLS -->
     <section class="skills" id="skills">
@@ -83,7 +88,9 @@
         <div class="content">
             <div class="column col-left reveal">
                 <h2 class="content-title">My Skills and Experiences</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laboriosam cumque tempore vel error quae, qui nesciunt nobis velit eos cum ullam doloribus sapiente quaerat minus inventore ab quod magnam. <br><br><br></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laboriosam cumque tempore vel error
+                    quae, qui nesciunt nobis velit eos cum ullam doloribus sapiente quaerat minus inventore ab quod
+                    magnam. <br><br><br></p>
                 <a href="" class="btn">See More</a>
             </div>
 
@@ -145,7 +152,9 @@
         <div class="title reveal">
             <div class="about__title">My Sedvises</div>
 
-            <p class="servises__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum rerum aperiam suscipit quae repudiandae, corporis odio, fuga cumque illum maxime ab. Pariatur, nihil? Debitis quos rem quas accusantium facilis.</p>
+            <p class="servises__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum rerum
+                aperiam suscipit quae repudiandae, corporis odio, fuga cumque illum maxime ab. Pariatur, nihil? Debitis
+                quos rem quas accusantium facilis.</p>
         </div>
 
         <div class="content">
@@ -231,15 +240,87 @@
     </section>
 
     <!-- CONTACT -->
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="title reveal">
-            <div class="about__title">About Me</div>
+            <div class="about__title">Contact Me</div>
+        </div>
+
+        <div class="content">
+            <div class="row">
+                <div class="card reveal">
+                    <div class="contact-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+
+                    <div class="info">
+                        <h3 class="">Address</h3>
+                        <span>Tashkent City</span>
+                    </div>
+                </div>
+
+                <div class="card reveal">
+                    <div class="contact-icon">
+                        <i class="fas fa-phone"></i>
+                    </div>
+
+                    <div class="info">
+                        <h3 class="">Phone</h3>
+                        <span>+998 90 919 68 71</span>
+                    </div>
+                </div>
+
+                <div class="card reveal">
+                    <div class="contact-icon">
+                        <i class="fas fa-envelope"></i>
+                    </div>
+
+                    <div class="info">
+                        <h3>Email Address</h3>
+                        <span>nosirov@gmail.com</span>
+                    </div>
+                </div>
+
+                <div class="card reveal">
+                    <div class="contact-icon">
+                        <i class="fas fa-globe"></i>
+                    </div>
+
+                    <div class="info">
+                        <h3 class="">Website</h3>
+                        <span>MyPortfolio.org</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="contact-form">
+                    <h3>Send Message</h3>
+                    <div class="input-box">
+                        <input type="text" placeholder="Name">
+                    </div>
+
+                    <div class="input-box">
+                        <input type="text" placeholder="Email">
+                    </div>
+
+                    <div class="input-box">
+                        <textarea rows="8" cols="80" placeholder="Message"></textarea>
+                    </div>
+
+                    <div class="input-box">
+                        <input type="submit" class="send-btn" value="Send">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
 
     <!-- FOOTER -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <span class="footer-title">Shamsiddin Nosirov</span>
+        <p>Copyrigth @2022. All Rights Peserved</p>
+    </footer>
 
     <script src="./js/main.js"></script>
 </body>
