--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <a class="brand" href="#">Shamsiddin</a>
         <div class="menu__btn"></div>
         <div class="nav">
-            <a href="#" class="nav__linc">home</a>
-            <a href="#" class="nav__linc">about</a>
-            <a href="#" class="nav__linc">skils</a>
-            <a href="#" class="nav__linc">servises</a>
-            <a href="#" class="nav__linc">work</a>
-            <a href="#" class="nav__linc">contact</a>
+            <a href="#main" class="nav__linc">home</a>
+            <a href="#about" class="nav__linc">about</a>
+            <a href="#skills" class="nav__linc">skils</a>
+            <a href="#servises" class="nav__linc">servises</a>
+            <a href="#work" class="nav__linc">work</a>
+            <a href="#contact" class="nav__linc">contact</a>
         </div>
     </header>
 
@@ -150,7 +150,7 @@
     <!-- SERVISES -->
     <section class="servises" id="servises">
         <div class="title reveal">
-            <div class="about__title">My Sedvises</div>
+            <div class="about__title">My Servises</div>
 
             <p class="servises__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laborum rerum
                 aperiam suscipit quae repudiandae, corporis odio, fuga cumque illum maxime ab. Pariatur, nihil? Debitis
