--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+
+
+    <div class="scrolltopp-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+
     <!-- HEADER -->
     <header class="header">
         <a class="brand" href="#">Shamsiddin</a>
