--- a/index.html
+++ b/index.html
@@ -47,10 +47,19 @@
             <a class="btn" href="#">Se My Work</a>
 
             <div class="media-icons">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/shamsiddinxon01/" target="_blanc">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://t.me/Shamsiddinxon_Nosirov" target="_blanc">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="https://github.com/Shamsiddinxon" target="_blanc">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/shamsiddinxon-nosirov-9b416b22a/" target="_blanc">
+                    <i class="fab fa-linkedin">
+                    </i>
+                </a>
             </div>
         </div>
     </section>
@@ -78,7 +87,7 @@
                     nisi sunt ullam nostrum . <br><br><br>
                 </p>
 
-                <a href="" class="btn">See More</a>
+                <a href="#" class="btn">See More</a>
             </div>
 
         </div>
